Added new method send email

--- a/force-app/main/default/classes/UtilityMethods.cls
+++ b/force-app/main/default/classes/UtilityMethods.cls
@@ -414,6 +414,9 @@
                 ccAddressList = new List<String>();
             }
         }     
+        public static string sendEmail(String emailattrjson){
+
+        }
         public static string sendEmail(String emailAttrJson)
         {    
             try{
